<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Layouts.Single">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/post_wait_container"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/post_wait"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginEnd="130dp"
                    android:layout_marginBottom="150dp" />
            </RelativeLayout>



            <ImageView
                android:id="@+id/post_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/post_image"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin = "8dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_launcher_background"
                    app:civ_border_width="2dp"
                    android:layout_weight="0"
                    app:civ_border_color="#FF000000"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textFontWeight="700"
                        android:text="@string/sample_username" />

                    <TextView
                        android:id="@+id/full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_full_name" />
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/post_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/hello_world" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:id="@+id/download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/download" />

                <Button
                    android:id="@+id/repost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repost" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>